name:                sparse-linear-algebra-IO
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/sparse-linear-algebra-IO
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          zocca marco gmail
copyright:           2017 Marco Zocca
category:            IO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , sparse-linear-algebra >= 0.2.2.0
                     , scientific
                     , matrix-market-attoparsec

-- executable sparse-linear-algebra-IO
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , sparse-linear-algebra-IO

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sparse-linear-algebra-IO
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/sparse-linear-algebra-IO
